# chops

./: Cargo.toml  README.md
chops/: memory.json
chops-api/: Cargo.toml
chops-api/src/: client.rs  cognitive.rs  lib.rs  models.rs
chops-chaos/: Cargo.toml
chops-chaos/src/: engine.rs  entropy.rs  lib.rs  mathematics.rs  patterns.rs
chops-cli/: Cargo.toml
chops-cli/src/: cli.rs  interactive.rs  main.rs  output.rs
chops-cli/src/commands/: collaborate.rs  config.rs  glitch.rs  memory.rs  mod.rs  mutate.rs  paradox.rs  possession.rs  prophecy.rs  summon.rs  time_travel.rs
chops-core/: Cargo.toml
chops-core/src/: config.rs  error.rs  lib.rs  memory.rs  types.rs
chops-persona/: Cargo.toml
chops-persona/src/: engine.rs  lib.rs  personalities.rs  traits.rs
examples/: README.md  usage_demo.sh
examples/sample_outputs/: advanced_command_examples.txt  basic_persona_commands.txt
