[package]
name = "chops-chaos"
version = "0.1.0"
edition = "2021"
description = "Chaos mathematics and controlled randomness engine for CHOPS"
license = "MIT"

[dependencies]
chops-core = { path = "../chops-core" }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
getrandom = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }