[package]
name = "chops-core"
version = "0.1.0"
edition = "2021"
description = "Core data structures and error handling for CHOPS - The AI Code Whisperer"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }