[package]
name = "chops-persona"
version = "0.1.0"
edition = "2021"
description = "Persona engine for CHOPS - personality-driven AI thinking"
license = "MIT"

[dependencies]
chops-core = { path = "../chops-core" }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }